--- a/style.css
+++ b/style.css
@@ -13,54 +13,89 @@ body {
   align-items: center;
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
-  background: #343434;
+  background: linear-gradient(#343434 0% 65%, #D3D3D3 100%);
 
   height: 100vh;
 }
 
 header {
   width: 100%;
-  background: #D4D4D4;
+  background: #2482e6;
   padding: 1rem 0;
 }
 
 h1 {
-  color: #343434;
+  color: #f2ebeb;
   padding-left: 2rem;
   font-size: 3rem;
 }
 
 label {
   font-weight: 600;
+  font-size: 1.2rem;
 }
 
 input {
   display: block;
   height: 3.6rem;
   width: 100%;
-  padding-left: 1rem
+  padding-left: 1rem;
+  border: 1px solid black; 
+  border-radius: .4rem;
 }
 
-span {
-  color: red;
-  font-weight: 400;
+input:not(.input-cep) {
+  border:1px dashed black;
+  font-weight: 600;
+  color: rgb(112, 112, 112);
+}
+
+a {
+  cursor: pointer;
+}
+
+.span-invalid {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 6.2rem;
+  left: 88%;
+  width: 9rem;
+
+
+  color: crimson;
+  font-weight: 600;
 }
 
 footer {
   background: #FEFEFE;
-  text-align: center;
+  text-align: end;
   padding-bottom: 1rem;
+}
+
+
+footer img {
+  width: 5rem;
+  margin-right: 2rem;
 }
 
 .container {
   display: flex;
   flex-direction: column;
 
-  border: 1px solid #D4D4D4;
   width: clamp(60rem, 60vw, 120rem);
   height: clamp(40rem, 50vh, 100rem);
   border-radius: 8px;
   overflow: hidden;
+  box-shadow: 0 2rem 5rem -.5rem #2482e6;
+  transform: scale(1.01);
+  transition: all 150ms linear;
+}
+
+.container:hover {
+  box-shadow: none;
+  transform: scale(1);
 }
 
 .content {
@@ -107,9 +142,31 @@ footer {
   animation: loadingRotate linear 1s infinite;
 }
 
+.check-icon {
+  position: absolute;
+  top: 5.9rem;
+  left: 95%;
+}
+
+
+.req-correct {
+  border-color: rgba(1, 79, 1);
+  background-color: rgba(98, 242, 98, 0.1); 
+}
+
+.req-incorrect {
+  border-color: crimson;
+  background-color: rgba(225, 83, 112, 0.1);
+}
+
+
+.input-cep:focus {
+  outline: none;
+  border-color: rgb(79, 79, 245);
+}
+
 @keyframes loadingRotate {
   from {
     transform: rotate(-360deg);
   }
 }
-
